fix: update jumplink

--- a/src/scss/_landing.scss
+++ b/src/scss/_landing.scss
@@ -57,14 +57,20 @@
   }
 
   &-jump {
-    display: inline-flex;
-    padding: 10px;
+    display: inline-grid;
+    width: 50px;
+    height: 50px;
     border: 0;
-    animation: move 1s alternate infinite ease-in-out;
     background: none;
     color: inherit;
     cursor: pointer;
-    font-size: 125%;
+    font-size: 150%;
+    place-items: center;
+
+    > * {
+      animation: move 1s alternate infinite ease-in-out;
+      pointer-events: none;
+    }
   }
 
   &-logo {
@@ -83,7 +89,7 @@
 
 @keyframes move {
   from {
-    transform: translateY(0);
+    transform: translateY(5px);
   }
 
   to {
